# auto-anime-register

./: .gitignore  Pipfile  README.md  main.py  pyproject.toml
.github/workflow/: python-lint.yml
.github/workflows/: python-lint.yml
apps/: give_mal_info.py  register_premiered.py  update_mal_info.py
functions/: anime.py  models.py  notion_database.py
modules/: anime.py  models.py  notion_database.py
src/: main.py
src/apps/: give.py  give_info.py  update.py
src/modules/: anime_api.py  cui.py  notion.py  notion_api.py  notion_x_anime.py
src/utils/: env.py  system.py
tests/modules/anime/: test_request_anime.py
typings/fire/: __init__.pyi  __main__.pyi  completion.pyi  completion_test.pyi  core.pyi  core_test.pyi  custom_descriptions.pyi  custom_descriptions_test.pyi  decorators.pyi  decorators_test.pyi  docstrings.pyi  docstrings_fuzz_test.pyi  docstrings_test.pyi  fire_import_test.pyi  fire_test.pyi  formatting.pyi  formatting_test.pyi  formatting_windows.pyi  helptext.pyi  helptext_test.pyi  inspectutils.pyi  inspectutils_test.pyi  interact.pyi  interact_test.pyi  main_test.pyi  parser.pyi  parser_fuzz_test.pyi  parser_test.pyi  test_components.pyi  test_components_bin.pyi  test_components_py3.pyi  test_components_test.pyi  testutils.pyi  testutils_test.pyi  trace.pyi  trace_test.pyi  value_types.pyi
typings/fire/console/: console_attr.pyi  console_attr_os.pyi  console_pager.pyi  encoding.pyi  platforms.pyi
typings/mal/: __init__.pyi  _mal.pyi  _manga.pyi  _manga_search.pyi  anime.pyi  anime_search.pyi  base.pyi  config.pyi  search.pyi
typings/notion_client/: __init__.pyi  api_endpoints.pyi  client.pyi  errors.pyi  helpers.pyi  logging.pyi  typing.pyi
